src/dts/tests/export_modules/export_modules.exp
Error: export_modules.js:3
  3: var x : string = (new P.C()).y;
                      ^^^^^^^^^^^^^ number. This type is incompatible with
  3: var x : string = (new P.C()).y;
             ^^^^^^ string


Found 1 error
